Required Spanish Conversion II _ sent V1

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -127,6 +127,11 @@ basket.validation.noStock=Unfortunately <a href=\"{1}\">{0}</a> was removed from
 basket.validation.unavailable=Unfortunately {0} was removed from your cart as it is no longer available.
 basket.view.basket=View basket
 basket.your.shopping.basket=Your Shopping Basket
+basket.your.shopping.container.utilization=Utilizaci\u00F3n de contenedor
+basket.your.shopping.container.utilization.volume=Volumen
+basket.your.shopping.container.utilization.weight=Peso
+basket.your.shopping.estimatedleadtime=Tiempo estimado de ejecuci\u00F3n
+basket.your.shopping.expecteddeliverydate=Fecha estimada de entrega :
 breadcrumb.cart=Carrito
 breadcrumb.home=Inicio
 breadcrumb.login=Iniciar Sesi\u00F3n
@@ -140,7 +145,7 @@ checkout.error.noQuoteDescription=Please enter the description of the quote,befo
 checkout.error.payment.not.accepted=Your payment was declined. Please check your payment details are correct.
 checkout.error.replenishment.no.Frequency=Please provide the replenishment frequency in order to create a replenishment order.
 checkout.error.replenishment.noStartDate=Please enter the replenishment start date
-checkout.error.terms.not.accepted=Por favor,acepte los t\u00E9rminos y condiciones antes de enviar su pedido.
+checkout.error.terms.not.accepted=Por favor,acepte los T\u00E9rminos y Condiciones antes de enviar su pedido.
 checkout.information.delivery.method.changed=Su forma de entrega se ha actualizado en base a la ubicaci\u00F3n de entrega.
 checkout.login.loginAndCheckout=Ingreso y Salida
 checkout.login.registerAndCheckout=Registro y Salida
@@ -216,7 +221,7 @@ checkout.summary.paymentMethod.securityCode.whatIsThis.description=The last 3 di
 checkout.summary.paymentType.header=Select Payment Type
 checkout.summary.placeOrder=Proceder
 checkout.summary.placeReplenishmentOrder=Poner pedido de Reposici\u00F3n
-checkout.summary.placeOrder.readTermsAndConditions=I have read and agree with the <a class=\"termsAndConditionsLink\" href=\"javascript:void(0)\">Terms & Conditions</a>
+checkout.summary.placeOrder.readTermsAndConditions=He le\u00EDdo y estoy de acuerdo con los <a class=\"termsAndConditionsLink\" href=\"javascript:void(0)\">t\u00E9rminos y condiciones</a>
 checkout.summary.purchaseOrderNumber=O.C. No.
 checkout.summary.replenishmentScheduleForm.title=Set replenishment schedule
 checkout.summary.scheduleReplenishment=Schedule Replenishment
@@ -262,10 +267,10 @@ general.month.september=September
 general.required=Required
 general.unknown.identifier=Unknown identifier was passed
 general.zoom=Enlarged view of picture
-header.link.account=My Account
+header.link.account=Mi Cuenta
 header.link.company=Mi Empresa
 header.link.login=Ingresar
-header.link.logout=Desconectar
+header.link.logout=Desconectarse / Salir
 header.welcome=Bienvenido {0}
 invalid.monetary.value=El formato monetario no es v\u00E1lido
 j_password=Contrase\u00F1a
@@ -300,7 +305,7 @@ order.replenishment.thankYou=Thank you very much,we have received your Order wit
 order.total=Total
 order.totals.delivery=Delivery:
 order.totals.savings=Savings:
-order.totals.subtotal=Subtotal:
+order.totals.subtotal=Sub total:
 order.totals.total=Total:
 order.form=Formulario de pedido
 order.form.total=Total del Formulario de Pedido
@@ -473,7 +478,7 @@ search.nav.facetShowMore_style=more styles...
 search.nav.facetShowMore_fit=more fits...
 search.nav.facetTitle=Shop by {0}
 search.nav.facetValueCount=({0})
-search.nav.refinements=Refine Por
+search.nav.refinements=REFINAMIENTOS
 search.nav.removeAttribute=Remove Attribute
 search.nav.resultsForStore=Results for: {0}
 search.no.results=No Results Found
@@ -487,7 +492,7 @@ search.page.searchText.exceptTerm=Ud. busc\u00F3
 search.page.showAllResults=Show all
 search.page.showPageResults=Show paginated
 search.page.sortTitle=Sort by:
-search.page.totalResults={0} Products found
+search.page.totalResults={0} Productos encontrados
 search.placeholder=Estoy buscando
 search.advanced=B\u00FAsqueda Avanzada
 search.advanced.keyword=B\u00FAsqueda por palabras claves
@@ -745,7 +750,7 @@ text.company.addNewBudgets=Add New Budgets
 text.company.addNewCostCenters=Add new cost center
 text.company.addNewPermission=Add new permission
 text.company.addNewUsergroup=Add new usergroup
-text.company.addNewUsers=Add new users
+text.company.addNewUsers=A\u00F1adir nuevos usuarios
 text.company.administrators.page.currentPage=Page {0} of {1}
 text.company.administrators.page.firstPage=&laquo;
 text.company.administrators.page.lastPage=&raquo;
@@ -1425,7 +1430,7 @@ product.grid.future.tooltip.qty=CANT
 product.grid.in.stock=En Inventario
 
 profile.text.b2BCustomerForm.roles=Por favor,seleccione funci\u00F3n
-text.account.quickorder.pageHeading=Formulario de Pedido R\u00E1pido
+text.account.quickorder.pageHeading=Orden r\u00E0pida
 text.account.quickorder.yourOrder=Your Order
 text.account.quickorder.noEntries=\u00BFPor qu\u00E9 esperar? Comenzar a pedir !!
 text.account.quickorder.productCode=C\u00F3digo de producto de Energizer
@@ -1433,7 +1438,7 @@ text.account.quickorder.customerProductCode=C\u00F3digo de Producto del Distribu
 text.account.quickorder.unitOfMeasure=Unidad de Medida
 text.account.quickorder.quantity=Cantidad
 text.account.quickorder.actions=Acciones
-text.account.quickorder.link=Formulario de Pedido R\u00E1pido
+text.account.quickorder.link=Orden r\u00E0pida
 quickorder.addtocart.nocmir=No existe el producto asignado al distribuidor.
 
 text.account.quickorder.continueToCheckout=Continuar con la revisi\u00F3n
@@ -1445,8 +1450,8 @@ product.variants.obsolete=Obsoleto
 text.account.excelUpload.fileUploadEmpty=You have not uploaded any file
 text.account.excelUpload.fileUploadSize=Maximum File Size is 1 MB
 text.account.excelUpload.fileUploadFormat=Supports only .xls and .xlsx formats
-text.account.excelUpload.FileUpload=Excel Order
-text.account.profile.QuickOrderForm=Formulario de Pedido R\u00E1pido
+text.account.excelUpload.FileUpload=Orden en Excel
+text.account.profile.QuickOrderForm=Orden r\u00E0pida
 text.account.excelUpload.orderShipmentPoint=Punto de env\u00EDo
 text.account.excelUpload.productData=Datos del Producto
 text.account.excelUpload.materialId=ID de Material ENR
@@ -1455,7 +1460,7 @@ text.account.excelUpload.uom=UOM
 text.account.excelUpload.quantity=Cantidad
 text.account.excelUpload.productnotfound= Producto no encontrado para {0}
 text.account.excelUpload.shipmentPoint=El punto de env\u00EDo debe ser el mismo que la compra de Productos
-text.account.excelFileUpload = Excel Order
+text.account.excelFileUpload =Orden en Excel
 text.account.excelUpload.cartShippingPoint=The cart Shipping Point is {0}
 text.account.excelUpload.badDataForQuantity= One or more records have bad data for quantity,so setting to default MOQ
 text.account.excelUpload.fileNotFound= File not Available to process...
