--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
@@ -60,7 +60,7 @@ type.PowertoolsSizeVariantProduct.size.description=
 b2bunit.ordervalue.error=El pedido no cumple con el valor m\u00EDnimo de pedido de
 uom.business.rule.productnotfound=Product not found.
 uom.business.rule.uomnotvalid=Unit of measure for this product is not valid.
-uom.business.rule.moqnotvalid=Minimum Ordering Quantity should be a multiple of
+uom.business.rule.moqnotvalid=Cantidad M\u00EDnima de Pedido debe ser m\u00FAltiplo de
 
 shippingpoint.business.rule.shipfromnotvalid=The shipping point of {0} product must be similar to the product(s) in the Cart.
 shippingpoint.business.rule.shipfromnotfound=El punto de env\u00EDo del producto {0} no se encuentra.
