Fixed the label issue for "Order Total instead Order Totals" and "FAQS instead FAQ"

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -294,7 +294,7 @@ login.username=Username
 myCompany.login.myCompanyHome=Login to My Company
 order.free=FREE
 order.itemPrice=Item Price
-order.order.totals=Order Totals
+order.order.totals=Order Total
 order.product=Product
 order.productDetails=Product Details
 order.quantity=Quantity
