--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -290,7 +290,7 @@ login.username=Nombre de usuario
 myCompany.login.myCompanyHome=Inicia sesi\u00F3n para Mi Empresa
 order.free=FREE
 order.itemPrice=Item Price
-order.order.totals=Totales del los pedidos
+order.order.totals=Totale del los pedidos
 order.product=Producto
 order.productDetails=Detalles del producto
 order.quantity=Cantidad
