Required Spanish Conversion II _ sent

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1477,6 +1477,9 @@ text.account.excelUpload.quantity=Quantity
 text.account.excelUpload.productnotfound= Product not found for {0} 
 text.account.excelUpload.shipmentPoint=Shipment Point should be same as Cart Products
 text.account.excelFileUpload = Excel Order
+text.account.excelFileToUpload = File to upload:
+text.account.click.excelFileUpload =Click here to upload the file!
+text.account.click.upload = Upload
 text.account.excelUpload.badDataForQuantity= One or more records have bad data for quantity, so setting to default MOQ
 text.account.excelUpload.fileNotFound= File not Available to process...
 text.account.excelUpload.unableToConvert=Unable to process the uploaded file
