--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1461,6 +1461,9 @@ text.account.excelUpload.quantity=Cantidad
 text.account.excelUpload.productnotfound= Producto no encontrado para {0}
 text.account.excelUpload.shipmentPoint=El punto de env\u00EDo debe ser el mismo que la compra de Productos
 text.account.excelFileUpload =Orden en Excel
+text.account.excelFileToUpload =Archivo para cargar:
+text.account.click.excelFileUpload =Haga clic aqu\u00ED para cargar archivo
+text.account.click.upload =cargar
 text.account.excelUpload.cartShippingPoint=The cart Shipping Point is {0}
 text.account.excelUpload.badDataForQuantity= One or more records have bad data for quantity,so setting to default MOQ
 text.account.excelUpload.fileNotFound= File not Available to process...
