Required Spanish Conversion II _ sent - Updated

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -130,7 +130,7 @@ basket.your.shopping.basket=Your Shopping Basket
 basket.your.shopping.container.utilization=Utilizaci\u00F3n de contenedor
 basket.your.shopping.container.utilization.volume=Volumen
 basket.your.shopping.container.utilization.weight=Peso
-basket.your.shopping.estimatedleadtime=Tiempo estimado de ejecuci\u00F3n
+basket.your.shopping.estimatedleadtime=Tiempo estimado de ejecuci\u00F3n :
 basket.your.shopping.expecteddeliverydate=Fecha estimada de entrega :
 breadcrumb.cart=Carrito
 breadcrumb.home=Inicio
@@ -230,7 +230,7 @@ checkout.multi.continueToSingleStep=Continue to single-step checkout
 checkout.multi.sampleLandingPage.text=This is a sample landing page.  Please add your own implementation.
 costCenter.title=Title
 costCenter.title.pleaseSelect=Please select...
-checkout.summary.deliveryDate.header = Delivery Date
+checkout.summary.deliveryDate.header =Fecha de entrega
 error.bugetcode.notfound=Budget code is not valid
 forgottenPwd.description=Por favor,ingrese la direcci\u00F3n de correo electr\u00F3nico para su cuenta. Un enlace para cambiar su contrase\u00F1a le ser\u00E1 enviado por correo electr\u00F3nico.
 forgottenPwd.email=Direcci\u00F3n de Correo Electr\u00F3nico
@@ -1485,9 +1485,11 @@ text.account.orderHistory.shippingDetaiils=Shipping Details
 text.account.orderHistory.containerNumber=Container Number
 text.account.orderHistory.carrierName=Carrier Name
 text.account.orderHistory.orderPlaced= Order Placed On
-text.account.orderHistory.poNumber  =Purchase Order Number
+text.account.orderHistory.poNumber  =N\u00FAmero de orden de compra
 
 text.account.quickorder.enterwholenumber=Enter a whole number
 text.account.quickorder.enterpositivenumber=Enter a positive number or non zero number
 text.account.quickorder.entermoqmultiples=Enter multiples of MOQ(Minimum Orderding Quantity)
 text.account.quickorder.inputvalidnumber=Input a valid number
+
+text.account.quickorder.currentShippingPointInCart=Su carrito tiene actualmente el Punto de env\u00EDo:
