--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -93,7 +93,7 @@ basket.page.weightUom=Peso UOM
 basket.page.volume= Volumen
 basket.page.volumeUom= Volumen UOM
 basket.page.obsolete.error=Este producto ya no se utiliza.
-basket.page.moq.notexists=MOQ does not exist for this product.
+basket.page.moq.notexists=MOQ no existe para este producto.
 basket.page.message.remove=El producto ha sido retirado de su carrito.
 basket.page.message.update=La cantidad del producto se ha actualizado.
 basket.page.quantity=Cantidad
