--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
@@ -62,6 +62,7 @@ b2bunit.ordervalue.error=The order does not satisfy the Minimum Order value of
 uom.business.rule.productnotfound=Product not found.
 uom.business.rule.uomnotvalid=Unit of measure for this product is not valid.
 uom.business.rule.moqnotvalid=Minimum Ordering Quantity should be a multiple of 
+basket.page.moq.notexists=MOQ does not exist for this product.
 
 shippingpoint.business.rule.shipfromnotvalid=The shipping point of {0} product must be similar to the product(s) in the Cart.
 shippingpoint.business.rule.shipfromnotfound=The shipping point of {0} product is not found.
