--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
@@ -61,7 +61,7 @@ businessrule.shippingPointMismatch=The shipping point of this product must be si
 b2bunit.ordervalue.error=The order does not satisfy the Minimum Order value of
 uom.business.rule.productnotfound=Product not found.
 uom.business.rule.uomnotvalid=Unit of measure for this product is not valid.
-uom.business.rule.moqnotvalid=Minimum Ordering Quantity should be a multiple of 
+uom.business.rule.moqnotvalid=Quantity ordered should be a multiple of 
 basket.page.moq.notexists=MOQ does not exist for this product.
 
 shippingpoint.business.rule.shipfromnotvalid=The shipping point of {0} product must be similar to the product(s) in the Cart.
