--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1468,7 +1468,7 @@ text.account.excelUpload.fileUploadSize=Maximum File Size is 1 MB
 text.account.excelUpload.fileUploadFormat=Supports only .xls and .xlsx formats
 text.account.excelUpload.FileUpload=Excel Order
 text.account.profile.QuickOrderForm=Quick Order
-text.account.excelUpload.orderShipmentPoint=Shipping Point
+text.account.excelUpload.orderShipmentPoint=Select Shipping Point
 text.account.excelUpload.productData=Product Data
 text.account.excelUpload.materialId=ENR Material Id
 text.account.excelUpload.customerMaterialId=Customer Material Id
