--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -225,7 +225,7 @@ checkout.summary.paymentType.header=Select Payment Type
 checkout.summary.placeOrder=Proceed
 simulateCheckout.summary.placeOrder =Place Order
 checkout.summary.placeReplenishmentOrder=Place Replenishment Order
-checkout.summary.placeOrder.readTermsAndConditions=I have read and agree with the <a class="termsAndConditionsLink" href="javascript:void(0)">Terms & Conditions</a>
+checkout.summary.placeOrder.readTermsAndConditions=I have read and agree to the <a class="termsAndConditionsLink" href="javascript:void(0)">Terms & Conditions</a>
 checkout.summary.purchaseOrderNumber=P.O.No.
 checkout.summary.replenishmentScheduleForm.title=Set replenishment schedule
 checkout.summary.scheduleReplenishment=Schedule Replenishment
