UI Fix and SIT Observation Fixes. and HPQC defect fix for B2BUser cron job

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
@@ -1,7 +1,7 @@
 ## Please note that the syntax of the property name should be as follows:
 ## propertyName=some string
 ## Please DO NOT USE, property.name=some string
-emailSubject=Forgotten Password
+emailSubject=Reset Your Distributor Portal Password
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0} {1}
