Fix for one liner description for each of the roles

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -47,10 +47,10 @@ b2bunit.yes.button=Yes
 b2buser.no.button=No
 b2buser.yes.button=Yes
 
-b2busergroup.b2badmingroup.name=Distributor Administrator
-b2busergroup.b2bapprovergroup.name=Distributor Approver
-b2busergroup.b2bcustomergroup.name=Distributor Order Creator
-b2busergroup.b2bviewergroup.name=Distributor Viewer
+b2busergroup.b2badmingroup.name=Distributor Administrator	- Can create/approve/view orders & manage users
+b2busergroup.b2bapprovergroup.name=Distributor Approver	- Can only approve orders
+b2busergroup.b2bcustomergroup.name=Distributor Order Creator - Can only create orders
+b2busergroup.b2bviewergroup.name=Distributor Viewer - Can only view catalog and previous orders
 
 b2busergroup.cancel=Cancel
 b2busergroup.id=Usergroup ID
