--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -47,10 +47,10 @@ b2bunit.yes.button=S\u00ED
 b2buser.no.button=No
 b2buser.yes.button=S\u00ED
 
-b2busergroup.b2badmingroup.name=Administrador del Distribuidor
-b2busergroup.b2bapprovergroup.name=Aprobador del Distribuidor
-b2busergroup.b2bcustomergroup.name=Creador del pedido del Distribuidor
-b2busergroup.b2bviewergroup.name=Visor del Distribuidor
+b2busergroup.b2badmingroup.name=Administrador Distribuidor - se puede crear / aprobar / view pedidos y administrar usuarios
+b2busergroup.b2bapprovergroup.name=Aprobador Distribuidor - Sólo puede aprobar pedidos
+b2busergroup.b2bcustomergroup.name=Distribuidor Solicitar Creador - Sólo puede crear órdenes
+b2busergroup.b2bviewergroup.name=Visor Distribuidor - Sólo puede ver los pedidos de catálogo y anteriores
 
 b2busergroup.cancel=Cancelar
 b2busergroup.id=ID de Grupo de Usuarios
