Logo Image change  and Each conversion fixes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -85,6 +85,7 @@ basket.page.prdCode=ID del Material
 basket.page.cmirId=ID del CMIR
 basket.page.shipFrom=kapal Ti
 basket.page.uom=Unidad de Ordenaci\u00F3n
+basket.page.baseuom.convertion=No de Cada
 basket.page.moq=M\u00EDnimo de pedido Cantidad
 basket.page.customerMaterialId=ID del Material del cliente
 basket.page.customerProductName=Nombre del producto del cliente
