--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -85,6 +85,7 @@ basket.page.prdCode=Product
 basket.page.cmirId=Customer Material ID
 basket.page.shipFrom=Ship From
 basket.page.uom=Unit Of Ordering
+basket.page.baseuom.convertion=No Of Each
 basket.page.moq=Minimum Ordering Quantity
 basket.page.customerMaterialId=Customer Material ID
 basket.page.customerProductName=Customer Product Name
