--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1364,7 +1364,7 @@ text.product=Product
 text.productDetails=Product Details
 text.quantity=Order Quantity
 text.adjustedquantity=Adjusted Quantity
-text.adjustedprice=Adjusted Price
+text.adjustedprice=Adjusted Unit Price
 text.adjustedtotal=Adjusted Total
 text.rejectedStatus= Rejected Status
 text.quote.empty=Please provide a comment for the quote
