Order creator name in order history page.

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1487,7 +1487,8 @@ text.account.excelUpload.fileNotFound= File not Available to process...
 text.account.excelUpload.unableToConvert=Unable to process the uploaded file
 text.account.excelUpload.noRowsFound=No Rows Found in the Uploaded file
 text.account.excelUpload.cartShippingPoint=The cart Shipping Point is {0}
-text.account.orderHistory.referenceNumber =  Reference Number 
+text.account.orderHistory.referenceNumber =Reference No
+text.account.orderHistory.notApplicable=Not Applicable 
 text.account.orderHistory.SAPorderNumber =  Order Number 
 text.account.orderHistory.orderType = Order Type
 text.account.MOQ = MOQ
