--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -1471,7 +1471,8 @@ text.account.excelUpload.badDataForQuantity= One or more records have bad data f
 text.account.excelUpload.fileNotFound= File not Available to process...
 text.account.excelUpload.unableToConvert=Unable to process the uploaded file
 text.account.excelUpload.noRowsFound=No Rows Found in the Uploaded file
-text.account.orderHistory.referenceNumber =  Reference Number
+text.account.orderHistory.referenceNumber =Reference No
+text.account.orderHistory.notApplicable=Not Applicable
 text.account.orderHistory.orderType = Order Type
 text.account.MOQ = MOQ
 text.account.Customer.Product.Name= Customer Product Name
