--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
@@ -7,8 +7,8 @@ storeFinder=Store Finder
 salutation=Hi {0} {1}
 thankYouForOrder= Approval for Order {0} has Failed.Order details are as below:
 quantity=Quantity
-itemPrice= Price
-total=Total Price
+itemPrice= Price(USD)
+total=Total Price(USD)
 free=$0.00
 purchaseOrderNumber=Purchase Order Number
 costCenter=Cost Center
