--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderConfirmation_en.properties
@@ -7,8 +7,8 @@ storeFinder=Store Finder
 salutation=Hi
 thankYouForOrder= Order {0} is approved.Order details are as below:
 quantity=Quantity
-itemPrice=Price
-total=Total Price
+itemPrice=Price(USD)
+total=Total Price(USD)
 free=0.00
 purchaseOrderNumber=Purchase Order Number
 costCenter=Cost Center
