propert file email template changes

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-customerRegistration_en.properties
@@ -9,7 +9,7 @@ thankYouForRegistering=Your Energizer Portal account is activated.
 registeredEmailInfo=Your registered email address is
 instructionsShoppingUrl=To start shopping please click here
 instructionsAccountUrl=To access your account please click here: {0}My Account{1}
-instructionsForgottenPswdUrl=If you forget your password, you can reset it at any time by clicking this link: {0}Update My Password{1}
+instructionsForgottenPswdUrl=To complete your registration, please click on the following link and generate your password: {0}Update My Password{1}
 instructionsContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
 complimentaryClosing=Thanks
 signature=Energizer Portal Team
