email template Order number populated

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
@@ -5,7 +5,7 @@ emailSubject= Order {0} is SHIPPED
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi 
-thankYouForOrder= Your Order {0} is SHIPPED 
+thankYouForOrder= Your Order {0}{1}{2} is SHIPPED 
 shippedItems=The following item(s) from Order {0}{1}{2} have been shipped:
 quantity=Ordered Quantity
 itemPrice=Ordered Item Price
