--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderCancelled_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderCancelled_en.properties
@@ -5,7 +5,7 @@ emailSubject= Order {0} is Cancelled
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Dear {0}
-thankYouForOrder= Your Order {0} is Cancelled
+thankYouForOrder= Your Order{0}{1}{2} is Cancelled
 shippedItems=The following item(s) from Order {0}{1}{2} have been cancelled:
 quantity=Ordered Quantity
 itemPrice=Ordered Item Price
