--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_en.properties
@@ -5,7 +5,7 @@ emailSubject= Order {0} is IN_PROCESS
 myAccount=My Account
 storeFinder=Store Finder
 salutation=Hi,
-thankYouForOrder= Your Order {0} is IN_PROCESS
+thankYouForOrder= Your Order {0}{1}{2} is IN_PROCESS
 shippedItems=The following item(s) from Order {0}{1}{2} is in process:
 quantity=Ordered Quantity
 itemPrice=Ordered Item Price
