--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
@@ -59,6 +59,7 @@ type.PowertoolsSizeVariantProduct.size.description=
 
 b2bunit.ordervalue.error=El pedido no cumple con el valor m\u00EDnimo de pedido de
 uom.business.rule.productnotfound=Product not found.
+product.business.rule.convesrion.notvalid =  Product does not have Conversion for 
 uom.business.rule.uomnotvalid=Unit of measure for this product is not valid.
 uom.business.rule.moqnotvalid=Cantidad M\u00EDnima de Pedido debe ser m\u00FAltiplo de
 basket.page.moq.notexists=MOQ no existe para este producto.
