email content update

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
@@ -4,7 +4,7 @@
 emailSubject=Energizer Order Approval Failed for reference no {0}
 myAccount=My Account
 storeFinder=Store Finder
-salutation=Hi {0} {1}
+salutation=Hi
 thankYouForOrder= Approval for Order {0} has Failed.Order details are as below:
 quantity=Quantity
 itemPrice= Price(USD)
