email content changed

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_de.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_de.properties
@@ -4,7 +4,7 @@
 emailSubject=Freigabe der Bestellung ausstehend {0}
 myAccount=Mein Konto
 storeFinder=Händlersuche
-salutation=Sehr geehrte(r) {0} {1}
+salutation=Sehr geehrte(r)
 thankYouForOrder=Vielen Dank für Ihre Bestellung. Ihre Bestellnummer lautet {0} und Ihre Bestellsumme beträgt {1}.
 quantity=Menge
 itemPrice=Artikelpreis
