--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderPendingApproval_en.properties
@@ -4,7 +4,7 @@
 emailSubject=Energizer Order Pending Approval {0}
 myAccount=My Account
 storeFinder=Store Finder
-salutation=Hi {0} {1}
+salutation=Hi
 thankYouForOrder= A new order  {0} is pending for approval. Order details are as below:
 quantity=Quantity
 itemPrice=Price(USD)
