text.account.user.save property Changes

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -741,6 +741,7 @@ text.account.replenishment.total.prices=Prices maybe different at the time of th
 text.account.replenishment.viewReplenishmentOrders=View your replenishment orders
 text.account.trackOrders=Track your orders
 text.account.user.saveUpdates=Guardar Actualizaciones
+text.account.user.save=Guardar
 text.account.viewOrderApproval=Ver pedidos que requieren aprobaci\u00F3n
 text.account.viewOrderHistory=Ver historial de pedidos
 text.account.viewQuotes=View my quotes
