code fixes  For: "Order Block - happy scenario working fine. But breaks if we follow steps below: 1. Add a product to Cart and see Order Blocked grayed out. 2. Click on Continue shopping and add more products. 3. Remove one of the products. ORDER BLOCKED is now green and clickable. 4. It starts functioning as a CHECKOUT button and order can be placed till the end." Can we display a one line message in the cart saying "Your account is blocked and you cannot place an order right now. Please contact customer service"

--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_en.properties
@@ -69,6 +69,7 @@ shippingpoint.business.rule.shipfromnotvalid=The shipping point of {0} product m
 shippingpoint.business.rule.shipfromnotfound=The shipping point of {0} product is not found.
 
 container.business.rule.orderExceeded=Dear Customer, You have exceeded the limit. Please adjust the cart.
+container.business.rule.orderblocked=Dear Customer, You order has been blocked. Please contact Customer Care
 
 
 type.EnergizerCMSLinkComponent.name=Energizer CMS Link Component
