--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
@@ -67,6 +67,7 @@ basket.page.moq.notexists=MOQ no existe para este producto.
 shippingpoint.business.rule.shipfromnotvalid=The shipping point of {0} product must be similar to the product(s) in the Cart.
 shippingpoint.business.rule.shipfromnotfound=El punto de env\u00EDo del producto {0} no se encuentra.
 container.business.rule.orderExceeded=Ha excedido el l\u00EDmite del contenedor en volumen / peso. Por favor ajuste su compra.
+container.business.rule.orderblocked=Estimado cliente , usted pide ha sido bloqueado . P\u00F3ngase en contacto con Atenci\u00F3n al Cliente
 
 type.EnergizerB2BUnit.name=Energizer B2B Unit
 type.EnergizerProduct.name=Energizer Product
