--- a/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_en.properties
+++ b/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_en.properties
@@ -25,6 +25,9 @@ energizer.address.description=EnergizerAddress
 energizer.address.name=EnergizerAddress
 energizer.metricunit.description=EnergizerMetricUnit
 energizer.metricunit.name=EnergizerMetricUnit
+energizer.shippingpoint.description=EnergizerShippingPoint
+energizer.shippingpoint.name=EnergizerShippingPoint
+
 
 type_tree_energizerb2bunit=Energizer B2BUnit
 type_tree_energizerproduct=Energizer Product
