reference number added in order approval dashboard

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -647,6 +647,7 @@ text.account.orderApprovalDashBoard.purchaseOrderNumber=P.O.No\:
 text.account.orderApprovalDashBoard.viewOrdersPendingForApproval=Orders pending for your approval
 text.account.orderApprovalDashboard=Order Approval Dashboard
 text.account.orderApprovalDetails.OrderNumber=Reference Number
+text.account.orderApprovalDetails.HybrisOrderNumber=Order Number
 text.account.orderApprovalDetails.comments.label=REJECTION COMMENTS
 text.account.orderApprovalDetails.costCenter=Cost Center
 text.account.orderApprovalDetails.orderPlacedBy=Order placed by
