correcting the password reset expiry time showing up on the email - i found it hard coded in the properties file instead of being parameterized

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-forgottenPassword_en.properties
@@ -7,7 +7,7 @@ storeFinder=Store Finder
 salutation=Dear {0} {1}
 sentenceAlmostDone=You&rsquo;re almost done.
 sentenceUpdatePswdInstructions=Please click on the link below to reset the password for your Energizer Portal account
-paragraphSecurityNote=Please note that link expires within 30 minutes of receipt of this mail. 
+paragraphSecurityNote=Please note that link expires within {0} minutes of receipt of this mail. 
 paragraphExpiredLink= {0}Request a password update{1}
 paragraphContactUs=If we can help you with any enquiry, please use our {0}Contact Us{1} page, or contact our customer services team directly via phone 1800-383-7323 or email {2}.
 complimentaryClosing=Thanks
