email help , terms and condition link added

--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-deliverySent_en.properties
@@ -39,3 +39,5 @@ adjustedPrice = Adjusted Price
 adjustedTotalPrice = Adjusted Total Price
 uom=UOM
 note=Note:This is an automatically generated email. Please do not reply to this mail.
+termsUrl=http://www.energizer.com/energizer-legal-statement
+faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
