--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-sendSubmitOrderToSAPFailedNotificationSubject_en.properties
@@ -40,4 +40,6 @@ UOM= UOM
 customerMaterialId=Customer Material Id
 erpMaterialId=ERP Material Id
 note=Note:This is an automatically generated email. Please do not reply to this mail.
+termsUrl=http://www.energizer.com/energizer-legal-statement
+faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
 
