--- a/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_en.properties
+++ b/bin/custom/energizer/energizercore/resources/energizercore/messages/email-orderInProcess_en.properties
@@ -22,3 +22,5 @@ contactUsPage=http://www.energizerholdings.com/en/pages/contactus.aspx
 contactUsEmailAddress=customerservices@hybris.com
 termsAndCondition=Terms &amp; Conditions
 note=Note:This is an automatically generated email. Please do not reply to this mail.
+termsUrl=http://www.energizer.com/energizer-legal-statement
+faqUrl=http://www.energizerholdings.com/en/pages/legal.aspx
