Fix to send mail after validation

--- a/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_en.properties
+++ b/bin/custom/energizer/energizercore/hmc/resources/com/energizer/core/hmc/locales_en.properties
@@ -37,6 +37,4 @@ type_tree_energizerb2bunitleadtime=Energizer B2BUnit LeadTime
 type_tree_energizerb2bcustomer=Energizer B2BCustomer
 type_tree_energizerpricerow=Energizer PriceRow
 type_tree_metricunit=MetricUnit
-
-
-
+type_tree_energizershippingpoint=Energizer ShippingPoint
