added the label changes for username to username(email)in places where username is required to be provided by the user

--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/base_es.properties
@@ -288,7 +288,7 @@ login.password=Contrase\u00F1a
 login.required=Necesario
 login.required.message=Los campos marcados con * son obligatorios
 login.title=Cliente
-login.username=Nombre de usuario
+login.username=Nombre de usuario(Email)
 myCompany.login.myCompanyHome=Inicia sesi\u00F3n para Mi Empresa
 order.free=FREE
 order.itemPrice=Item Price
