Updated spanish content

--- a/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
+++ b/bin/custom/energizer/energizercore/resources/localization/energizercore-locales_es.properties
@@ -58,16 +58,16 @@ type.PowertoolsSizeVariantProduct.size.description=
 
 
 b2bunit.ordervalue.error=El pedido no cumple con el valor m\u00EDnimo de pedido de
-uom.business.rule.productnotfound=Product not found.
-product.business.rule.convesrion.notvalid =  Product does not have Conversion for 
-uom.business.rule.uomnotvalid=Unit of measure for this product is not valid.
+uom.business.rule.productnotfound=Producto no encontrado
+product.business.rule.convesrion.notvalid =  Product does not have Conversion for
+uom.business.rule.uomnotvalid=La unidad de medida de este producto es inv\u00E1lida 
 uom.business.rule.moqnotvalid=Cantidad M\u00EDnima de Pedido debe ser m\u00FAltiplo de
 basket.page.moq.notexists=MOQ no existe para este producto.
 
-shippingpoint.business.rule.shipfromnotvalid=The shipping point of {0} product must be similar to the product(s) in the Cart.
+shippingpoint.business.rule.shipfromnotvalid=El punto de env\u00EDo del producto (0) debe ser similar al del producto(s) en el carro de compra.
 shippingpoint.business.rule.shipfromnotfound=El punto de env\u00EDo del producto {0} no se encuentra.
 container.business.rule.orderExceeded=Ha excedido el l\u00EDmite del contenedor en volumen / peso. Por favor ajuste su compra.
-container.business.rule.orderblocked=Estimado cliente , usted pide ha sido bloqueado . P\u00F3ngase en contacto con Atenci\u00F3n al Cliente
+container.business.rule.orderblocked=Estimado cliente,usted pide ha sido bloqueado . P\u00F3ngase en contacto con Atenci\u00F3n al Cliente
 
 type.EnergizerB2BUnit.name=Energizer B2B Unit
 type.EnergizerProduct.name=Energizer Product
