--- a/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-energizer_es.properties
+++ b/bin/custom/energizer/energizerstorefront/web/webroot/WEB-INF/messages/site-energizer_es.properties
@@ -9,55 +9,55 @@ cart.page.checkout=Revisi\u00F3n
 cart.page.continue=Seguir Comprando
 cart.page.title=Su Carrito
 cart.page.total=Total:
-cart.view=VIEW CART
-category.navTitle=Shop by Category
-minicart.cart.alt=Your Shopping Cart
-text.actions=Actions
+cart.view=Ver carro
+category.navTitle=Comprar por categor\u00EDa
+minicart.cart.alt=Su carro de compras
+text.actions=Acciones
 text.addToCart.outOfStock=Agotado
 text.addToCart=A\u00F1adir a carrito
-text.address=Address
+text.address=Direcciones
 text.checkout.noDeliveryModes=Por favor,verifique la direcci\u00F3n de entrega. Si no est\u00E1 seleccionada,por favor seleccione la direcci\u00F3n de entrega primero y vuelva a intentarlo.
 text.checkout=Revisi\u00F3n
 text.currency=Seleccionar moneda
-text.default=Default
+text.default=Defecto
 text.deliveryAddress=Direcci\u00F3n De Entrega
 text.deliveryMethod=Forma De Entrega
 text.edit=Editar
-text.expires=Expires
-text.free=FREE
+text.expires=Expira
+text.free=GRATIS
 text.iconCartRemove=Eliminar
 text.itemPrice=Precio de art\u00EDculo
 text.language=Seleccione Idioma
-text.paymentMethod=Payment Method
-text.pleaseSelect=Please select...
+text.paymentMethod=M\u00E9todo de pago
+text.pleaseSelect=Por favor seleccione\u2026
 text.popupCartTitle=Su Carrito
 text.product=Producto
 text.productDetails=Detalles Del Producto
 text.quantity=Cantidad
 text.remove=Eliminar
 text.search=B\u00FAsqueda
-text.setDefault=Set as default
-text.skipToContent=Skip to content
-text.skipToNavigation=Skip to navigation menu
-text.status=Status
-text.hideFacet=Hide Refinement
-text.showFacet=Show Refinement
+text.setDefault=Establecer como predeterminado
+text.skipToContent=Saltar al contenido
+text.skipToNavigation=Saltar al men\u00FA de navegaci\u00F3n
+text.status=Estado
+text.hideFacet=Ocultar refinamiento
+text.showFacet=Mostrar refinamiento
 text.total=Total
-text.updates=Updates
-text.view=View
+text.updates=Actualizaciones
+text.view=Ver
 text.volumePrices=Precios por volumen disponibles
-text.orderDetails=Order Details
+text.orderDetails=Detalles de la orden
 address.postcode.invalid=Por favor,ingrese el c\u00F3digo postal
 address.postcode=C\u00F2digo Postal
 
 storeFinder.postcode.town=C\u00F3digo postal / Ciudad
-storelocator.error.no.results.subtitle=Check that you entered a valid zip code or place name.
+storelocator.error.no.results.subtitle=Aseg\u00FArate de que has introducido un c\u00F3digo postal o una ciudad v\u00E1lida.
 
 account.confirmation.signout.subtitle=Su carrito estar\u00E1 esperando por usted cuando inicie nuevamente su sesion.
 basket.add.free.gift=Add your free gift to Cart
 basket.add.to.basket=A\u00F1adir al carrito
 basket.added.to.basket=A\u00F1adido a su Carrito
-basket.confirmation.items.added=Your saved items were added to your cart.
+basket.confirmation.items.added=Sus elementos guardados se han a\u00F1adido a su carrito.
 basket.error.occurred=Se produjo un error al agregar al carrito
 basket.error.product.removed=Lo sentimos,uno o m\u00E1s productos sean retirados de su carrito,ya que no hay en inventario o ya no est\u00E1n disponibles.
 basket.information.merge.successful=El carrito guardado contra de su cuenta de usuario y su carrito actual se han fusionado. Haga clic aqu\u00ED para visitar su carrito.
@@ -67,9 +67,9 @@ basket.error.quantity.multiple.invalid=Por favor,ingrese un n\u00FAmero positivo
 basket.page.message.remove=El producto ha sido retirado de su carrito.
 basket.page.viewFuture.not.multisku= The selected code {0} is not a multidimensional product.
 basket.page.title.yourItems=Su Carrito
-basket.view.basket=View cart
-basket.your.shopping.basket=Your Shopping Cart
+basket.view.basket=Ver carrito
+basket.your.shopping.basket=Su carro de compras
 breadcrumb.cart=Carrito
 popup.cart.title=Su carrito
 
-login.maxattempts.failed=Your maximum attempts to login has failed. Your account is blocked. Please contact your administrator to unblock your account. Incase, you have forgot your password, click on the Generate New Password link.
+login.maxattempts.failed=Ha alcanzado el m\u00E1ximo de intentos de ingreso. Su cuenta est\u00E1 bloqueada . Por favor,p\u00F3ngase en contacto con el administrador para desbloquear su cuenta. En caso de que haya olvidado su contrase\u00F1a,haga clic en el enlace Generar nueva contrase\u00F1a .
